--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.17",
     "localforage": "^1.10.0",
     "pinia": "^3.0.4",
     "vitest": "^4.0.8",
@@ -20,6 +22,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/test-utils": "^2.4.0-alpha.2",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "vite": "^7.1.7"
   }
 }
